--- a/.env
+++ b/.env
@@ -12,4 +12,7 @@ ENSEMBLE=1
 RUN=0
 RESTARTNUM=0
 STOKES=0
-SUBMISSION='analysis'
+SUBMISSION='simulation'
+CONCENTRATION = 0
+TIMESERIES = 0
+MAX_DISTANCE=0
